Added required script for reverse dep

--- a/circle.yml
+++ b/circle.yml
@@ -10,3 +10,9 @@ general:
 test: 
   override:
     - /bin/bash -c "cat package.json"
+
+deployment: 
+  prod: 
+    branch: patched
+    commands: 
+      - "./circle_ci_trigger_build"
